cabal-version:      3.4
name:               UmbraVox
version:            0.7.0
synopsis:           Decentralized encrypted communications protocol
description:
  UmbraVox is a research-oriented encrypted messaging project with
  post-quantum cryptography, preserved blockchain-facing design work,
  and a Haskell-first runtime backed by handwritten F* formal models.
  The current assurance boundary and trust gaps are documented in
  README.md and doc/assurance-matrix.md.
license:            Apache-2.0
license-file:       LICENSE
build-type:         Simple

flag pure-haskell
  description: Use pure Haskell reference implementations (no FFI C)
  default:     True
  manual:      True

flag pure-haskell-crypto
  description: Use pure Haskell crypto (NOT constant-time). Disable for FFI to C.
  default:     False
  manual:      True

flag profiling
  description: Enable GHC cost-centre profiling annotations
  default:     False
  manual:      True

flag coverage
  description: Enable HPC instrumentation for MC/DC coverage
  default:     False
  manual:      True

flag chaste-build
  description: Compile an ephemeral-only client with persistence/discovery features removed from the runtime surface
  default:     False
  manual:      True

flag wasm
  description: Build only pure crypto core (no network/TUI/storage). For use with wasm32-wasi-ghc via ghc-wasm-meta.
  default:     False
  manual:      True



common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    StrictData
    TypeApplications

library
  import:           warnings, lang
  hs-source-dirs:   src
  -- Modules included unconditionally: pure crypto core, safe for WASM target.
  -- See doc/WASM-TARGET.md and the 'wasm' flag below.
  exposed-modules:
    -- Crypto primitives (pure; WASM-eligible)
    UmbraVox.Crypto.SecureBytes
    UmbraVox.Crypto.Warning
    UmbraVox.Crypto.SHA256
    UmbraVox.Crypto.SHA512
    UmbraVox.Crypto.HMAC
    UmbraVox.Crypto.HKDF
    UmbraVox.Crypto.AES
    UmbraVox.Crypto.GCM
    UmbraVox.Crypto.Curve25519
    UmbraVox.Crypto.Ed25519
    UmbraVox.Crypto.Keccak
    UmbraVox.Crypto.Poly1305
    UmbraVox.Crypto.ChaChaPoly
    UmbraVox.Crypto.MLKEM
    UmbraVox.Crypto.ConstantTime
    UmbraVox.Crypto.BIP39
    -- Signal protocol core (pure transforms; WASM-eligible)
    UmbraVox.Crypto.Signal.X3DH
    UmbraVox.Crypto.Signal.PQXDH
    UmbraVox.Crypto.Signal.DoubleRatchet
    -- Pure serialization (WASM-eligible)
    UmbraVox.Protocol.Encoding
    UmbraVox.Protocol.CBOR
    -- Version
    UmbraVox.Version
  if !flag(wasm)
    exposed-modules:
      -- Crypto (IO / FFI-backed; not pure WASM)
      UmbraVox.Crypto.VRF
      UmbraVox.Crypto.Random
      UmbraVox.Crypto.StealthAddress
      UmbraVox.Crypto.Export
      UmbraVox.Crypto.RatchetPersist
      UmbraVox.Crypto.PQWrapper
      UmbraVox.Crypto.KeyStore
      UmbraVox.Crypto.SecureFd
      UmbraVox.Crypto.Signal.SenderKeys
      UmbraVox.Crypto.Signal.Session
      UmbraVox.Crypto.Signal.Compat
      UmbraVox.Protocol.SignalWire
      -- Active generated coverage spans the preserved Haskell, C, and FFI
      -- namespaces. Generated C and FFI paths are linked through truthful
      -- bridge wrappers plus compile/link probes.
      UmbraVox.Crypto.Generated.AES256
      UmbraVox.Crypto.Generated.ChaCha20
      UmbraVox.Crypto.Generated.HKDF
      UmbraVox.Crypto.Generated.HMAC
      UmbraVox.Crypto.Generated.Keccak
      UmbraVox.Crypto.Generated.MLKEM768
      UmbraVox.Crypto.Generated.Poly1305
      UmbraVox.Crypto.Generated.SHA256
      UmbraVox.Crypto.Generated.SHA512
      UmbraVox.Crypto.Generated.X25519
      UmbraVox.Crypto.Generated.VRF
      UmbraVox.Crypto.Generated.PQWrapper
      UmbraVox.Crypto.Generated.MessageFormat
      UmbraVox.Crypto.Generated.WireFormat
      UmbraVox.Crypto.Generated.Ed25519Extended
      UmbraVox.Crypto.Generated.Dandelion
      UmbraVox.Crypto.Generated.NetworkProtocol
      UmbraVox.Crypto.Generated.SessionState
      UmbraVox.Crypto.Generated.FFI.AES256
      UmbraVox.Crypto.Generated.FFI.GCM
      UmbraVox.Crypto.Generated.FFI.ChaCha20
      UmbraVox.Crypto.Generated.FFI.HKDF
      UmbraVox.Crypto.Generated.FFI.HMAC
      UmbraVox.Crypto.Generated.FFI.Keccak
      UmbraVox.Crypto.Generated.FFI.MLKEM768
      UmbraVox.Crypto.Generated.FFI.Poly1305
      UmbraVox.Crypto.Generated.FFI.SHA256
      UmbraVox.Crypto.Generated.FFI.SHA512
      UmbraVox.Crypto.Generated.FFI.X25519
      UmbraVox.Crypto.Generated.FFI.VRF
      UmbraVox.Crypto.Generated.FFI.PQWrapper
      UmbraVox.Crypto.Generated.FFI.MessageFormat
      UmbraVox.Crypto.Generated.FFI.WireFormat
      UmbraVox.Crypto.Generated.FFI.Ed25519Extended
      UmbraVox.Crypto.Generated.FFI.Dandelion
      UmbraVox.Crypto.Generated.FFI.NetworkProtocol
      UmbraVox.Crypto.Generated.FFI.SessionState
      UmbraVox.Crypto.Generated.FFI.Entropy
      -- M13.15.4 / M13.15.5: fiat-crypto bridge link-probe FFI modules
      UmbraVox.Crypto.Generated.FFI.BridgeEd25519
      UmbraVox.Crypto.Generated.FFI.BridgeX25519
      -- Network
      UmbraVox.Network.TransportClass
      UmbraVox.Network.Transport
      UmbraVox.Network.Transport.Loopback
      UmbraVox.Network.Transport.Intercept
      UmbraVox.Network.Transport.UDP
      UmbraVox.Network.Transport.Blockchain
      UmbraVox.Network.Transport.SignalServer
      UmbraVox.Network.Transport.XMPP
      UmbraVox.Network.Transport.Discord
      UmbraVox.Network.Transport.Matrix
      UmbraVox.Network.Transport.Socks5
      UmbraVox.Network.ProviderCatalog
      UmbraVox.Network.ProviderRuntime
      UmbraVox.Network.Noise
      UmbraVox.Network.Noise.State
      UmbraVox.Network.Noise.Handshake
      UmbraVox.Network.PeerManager
      UmbraVox.Network.Dandelion
      UmbraVox.Network.RateLimit
      UmbraVox.Network.Protocol
      UmbraVox.Network.MDNS
      UmbraVox.Network.PeerExchange
      UmbraVox.Network.Presence
      UmbraVox.Network.Discovery
      UmbraVox.Network.DHT.Types
      UmbraVox.Network.DHT.RoutingTable
      UmbraVox.Network.DHT.RPC
      UmbraVox.Network.DHT.Lookup
      UmbraVox.Network.DHT.Store
      UmbraVox.Network.DHT
      UmbraVox.Network.Relay
      UmbraVox.Network.Listener
      -- App / Config
      UmbraVox.App.Config
      UmbraVox.App.ConfigFile
      UmbraVox.App.Defaults
      UmbraVox.App.State
      UmbraVox.App.Types
      -- Chat
      UmbraVox.App.RuntimeLog
      UmbraVox.App.Startup
      UmbraVox.App.SwapCheck
      UmbraVox.BuildProfile
      -- Plugin framework
      UmbraVox.Plugin.Types
      UmbraVox.Plugin.Registry
      UmbraVox.Chat.Wire
      UmbraVox.Chat.Session
      UmbraVox.Chat.Message
      UmbraVox.Chat.Contacts
      UmbraVox.Chat.API
      UmbraVox.Chat.OutboundQueue
      -- Storage
      UmbraVox.Storage.Class
      UmbraVox.Storage.InMemory
      UmbraVox.Storage.AnthonyAdapter
      UmbraVox.Storage.Schema
      UmbraVox.Storage.Encryption
      UmbraVox.Storage.SQLite3
      UmbraVox.Storage.Anthony
      -- Protocol / Serialization (remainder)
      UmbraVox.Protocol.UTF8
      UmbraVox.Protocol.MessageFormat
      UmbraVox.Protocol.QRCode
      UmbraVox.Protocol.ProofOfWork
      UmbraVox.Protocol.RouteToken
      UmbraVox.Protocol.WireFormat
      UmbraVox.Protocol.Handshake
      -- TUI
      UmbraVox.TUI.Types
      UmbraVox.TUI.Constants
      UmbraVox.TUI.Text
      UmbraVox.TUI.InputBuffer
      UmbraVox.TUI.RichText
      UmbraVox.TUI.PaginatedList
      UmbraVox.TUI.Terminal
      UmbraVox.TUI.Layout
      UmbraVox.TUI.LayoutGrid
      UmbraVox.TUI.Dialog
      UmbraVox.TUI.EmojiPicker
      UmbraVox.TUI.Menu
      UmbraVox.TUI.RuntimeCommand
      UmbraVox.TUI.RuntimeEvent
      UmbraVox.TUI.RuntimeNetwork
      UmbraVox.TUI.RuntimeSettings
      UmbraVox.TUI.Render
      UmbraVox.TUI.Input
      UmbraVox.TUI.Actions
      UmbraVox.TUI.Actions.Session
      UmbraVox.TUI.Actions.Export
      UmbraVox.TUI.Handshake
      -- Tools
      UmbraVox.Tools.Complexity
      UmbraVox.Tools.FStarVerify
      UmbraVox.Tools.FetchReferences
      UmbraVox.Tools.ReleaseBridge
      UmbraVox.Tools.Compliance
      UmbraVox.Tools.Provenance
      UmbraVox.Tools.PcapVerify
      -- Bridge plugins
      UmbraVox.Bridge.Signal.Registration
      UmbraVox.Bridge.Signal.Session
      UmbraVox.Bridge.Signal.WebSocket
      UmbraVox.Bridge.UmbraClaw.Main
      UmbraVox.Bridge.UmbraClaw.Session
      -- Headless runtime
      UmbraVox.Runtime.Headless
  build-depends:
    base         >= 4.18  && < 5,
    bytestring   >= 0.11  && < 0.14,
    containers   >= 0.6   && < 0.10,
    array        >= 0.5   && < 0.7,
    stm          >= 2.5   && < 2.7,
    text         >= 2.0   && < 2.3
  if !flag(wasm)
    build-depends:
      network      >= 3.1   && < 3.4,
      directory    >= 1.3   && < 1.5,
      filepath     >= 1.4   && < 1.7,
      time         >= 1.12  && < 1.17,
      process      >= 1.6   && < 1.8
  if !flag(wasm) && !os(windows)
    build-depends:
      unix         >= 2.8   && < 2.11
    pkgconfig-depends: sqlite3
    c-sources:
      csrc/secure_zero.c
      csrc/secure_mlock.c
      csrc/sqlite3_shim.c
      csrc/generated/aes256.c
      -- M38.2: EverCrypt AES-256-GCM + ChaCha20-Poly1305 SIMD (INTERIM PRODUCTION)
      -- EverCrypt AEAD dispatch layer
      csrc/hacl/EverCrypt_AEAD.c
      csrc/hacl/EverCrypt_AutoConfig2.c
      csrc/hacl/EverCrypt_Chacha20Poly1305.c
      csrc/hacl/EverCrypt_Cipher.c
      csrc/hacl/Vale.c
      csrc/hacl/Lib_Memzero0.c
      csrc/hacl/hacl_fsmath.c
      -- ChaCha20-Poly1305 AEAD: scalar + SIMD128 + SIMD256
      csrc/hacl/Hacl_AEAD_Chacha20Poly1305.c
      csrc/hacl/Hacl_AEAD_Chacha20Poly1305_Simd128.c
      csrc/hacl/Hacl_AEAD_Chacha20Poly1305_Simd256.c
      csrc/hacl/Hacl_Chacha20_Vec128.c
      csrc/hacl/Hacl_Chacha20_Vec256.c
      csrc/hacl/Hacl_MAC_Poly1305_Simd128.c
      csrc/hacl/Hacl_MAC_Poly1305_Simd256.c
      -- AES-256-GCM bridge
      csrc/hacl/bridge_aesgcm.c
      -- ChaCha20-Poly1305 AEAD bridge (wraps EverCrypt_Chacha20Poly1305, pure-software)
      csrc/hacl/bridge_chacha20poly1305.c
      csrc/hacl/Hacl_Chacha20.c
      csrc/hacl/bridge_chacha20.c
      -- M13.15.14: HACL* verified HKDF (replaces generated/hkdf.c as primary impl)
      -- generated/hkdf.c is RETAINED in csrc/ as differential testing oracle.
      csrc/hacl/Hacl_HKDF.c
      csrc/hacl/bridge_hkdf.c
      -- M13.15.13: HACL* verified HMAC (replaces generated/hmac.c as primary impl)
      -- generated/hmac.c is RETAINED in csrc/ as differential testing oracle.
      csrc/hacl/Hacl_Hash_Blake2b.c
      csrc/hacl/Hacl_Hash_Blake2s.c
      csrc/hacl/Hacl_Hash_MD5.c
      csrc/hacl/Hacl_Hash_SHA1.c
      csrc/hacl/Hacl_HMAC.c
      csrc/hacl/bridge_hmac.c
      -- M13.15.12: HACL* verified Keccak/SHA-3 (replaces generated/keccak.c as primary impl)
      -- generated/keccak.c is RETAINED in csrc/ as differential testing oracle.
      csrc/hacl/Hacl_Hash_SHA3.c
      csrc/hacl/bridge_keccak.c
      csrc/generated/mlkem768.c
      csrc/hacl/Hacl_MAC_Poly1305.c
      csrc/hacl/bridge_poly1305.c
      -- M13.15.8/9: HACL* verified SHA-256 and SHA-512 via upstream Hacl_Hash_SHA2.
      -- generated/sha256.c and generated/sha512.c are RETAINED as differential testing oracles.
      -- hacl_sha256_portable.c / hacl_sha512_portable.c are retained for differential testing only.
      csrc/hacl/Hacl_Hash_SHA2.c
      csrc/hacl/bridge_sha256.c
      csrc/hacl/bridge_sha512.c
      csrc/generated/x25519.c
      csrc/generated/vrf.c
      csrc/generated/pqwrapper.c
      csrc/generated/messageformat.c
      csrc/generated/wireformat.c
      csrc/generated/ed25519extended.c
      csrc/generated/dandelion.c
      csrc/generated/networkprotocol.c
      csrc/generated/sessionstate.c
      csrc/constant_time.c
      -- M40.33: platform-aware OS entropy source (getrandom/getentropy/BCrypt).
      -- Replaces raw /dev/urandom reads in Crypto.Random; csrc/generated/entropy.c
      -- is a documented non-oracle stub and is intentionally NOT compiled.
      csrc/entropy/bridge_entropy.c
      -- M13.15.4 / M13.15.5: fiat-crypto GF(2^255-19) field ops + Ed25519/X25519 bridges
      csrc/fiat/fiat_25519_64.c
      csrc/fiat/bridge_ed25519.c
      csrc/fiat/bridge_x25519.c
    include-dirs:
      csrc
      csrc/hacl
      csrc/hacl/krml
      csrc/hacl/krml/internal
      csrc/fiat
      csrc/entropy
      csrc/extracted
    -- M40.33: -std=gnu11 (was c99) so csrc/entropy/bridge_entropy.c can use
    -- C11 <stdatomic.h> for the pthread_atfork flag. gnu11 is a backward-
    -- compatible superset of gnu99 and retains the GNU extensions HACL* uses.
    cc-options: -std=gnu11 -D_DEFAULT_SOURCE=1 -D_ISOC11_SOURCE=1 -fstack-protector-strong -D_FORTIFY_SOURCE=2 -Wformat -Wformat-security
      -DFIAT_VENDORED -Wno-unused-function -Wno-unused-parameter
  -- M38.2: Vale assembly (AES-NI + GHASH) — x86-64 only
  if !flag(wasm) && !os(windows) && arch(x86_64) && os(linux)
    asm-sources:
      csrc/hacl/aesgcm-x86_64-linux.S
      csrc/hacl/cpuid-x86_64-linux.S
  if !flag(wasm) && !os(windows) && arch(x86_64) && os(darwin)
    asm-sources:
      csrc/hacl/aesgcm-x86_64-darwin.S
  -- M38.2: SIMD intrinsic flags required by EverCrypt SIMD ChaCha20-Poly1305
  if !flag(wasm) && !os(windows) && arch(x86_64)
    cc-options: -maes -mpclmul -msse4.2 -mavx -mavx2
  -- M40.33d: Windows entropy bridge (BCryptGenRandom). Only the entropy
  -- primitive is wired for Windows today; the remaining C crypto bridges are
  -- POSIX-only (see the !os(windows) block above), so a full Windows build is
  -- not yet supported. This stanza is forward-looking so the OS CSPRNG entropy
  -- source is in place when Windows support is completed. bridge_entropy.c uses
  -- only <bcrypt.h> on Windows (no pthread/fork), linked via -lbcrypt.
  if os(windows)
    c-sources:
      csrc/entropy/bridge_entropy.c
    include-dirs:
      csrc
      csrc/entropy
    cc-options: -std=c11 -D_FORTIFY_SOURCE=2 -Wformat -Wformat-security
      -Wno-unused-function -Wno-unused-parameter
    extra-libraries: bcrypt
  if flag(pure-haskell-crypto)
    cpp-options: -DPURE_HASKELL_CRYPTO
  if flag(chaste-build)
    cpp-options: -DCHASTE_BUILD
  if flag(wasm)
    cpp-options: -DWASM_BUILD

executable umbravox
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   app/umbravox
  build-depends:
    base         >= 4.18  && < 5,
    UmbraVox
  if !os(windows)
    build-depends:
      unix         >= 2.8   && < 2.11
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"

executable umbravox-headless
  import:           warnings, lang
  main-is:          Headless.hs
  hs-source-dirs:   app/umbravox
  build-depends:
    base         >= 4.18  && < 5,
    UmbraVox
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"

executable codegen
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   app/codegen
  other-modules:
    CryptoGen
    CBORGen
    FSMGen
    TestGen
  build-depends:
    base         >= 4.18  && < 5,
    directory    >= 1.3   && < 1.5,
    filepath     >= 1.4   && < 1.7

executable check-complexity
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   scripts/check-complexity
  build-depends:
    base         >= 4.18  && < 5,
    UmbraVox
  ghc-options:      -threaded

executable fstar-verify
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   scripts/fstar-verify
  build-depends:
    base         >= 4.18  && < 5,
    directory    >= 1.3   && < 1.5,
    filepath     >= 1.4   && < 1.7,
    process      >= 1.6   && < 1.8,
    UmbraVox
  ghc-options:      -threaded

executable fetch-references
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   scripts/fetch-references
  build-depends:
    base         >= 4.18  && < 5,
    directory    >= 1.3   && < 1.5,
    UmbraVox
  ghc-options:      -threaded

executable umbravox-signal-bridge
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   app/signal-bridge
  build-depends:
    base         >= 4.18  && < 5,
    bytestring   >= 0.11  && < 0.14,
    UmbraVox
  ghc-options:      -threaded

executable umbravox-umbraclaw
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   app/umbraclaw
  build-depends:
    base         >= 4.18  && < 5,
    UmbraVox
  ghc-options:      -threaded

test-suite umbravox-test
  import:           warnings, lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test, app/codegen
  other-modules:
    Test.Util
    Test.App.Startup
    Test.App.RuntimeLog
    Test.Harness
    Test.EndToEnd
    Test.EndToEnd2
    Test.Crypto.SHA256
    Test.Crypto.SHA512
    Test.Crypto.HMAC
    Test.Crypto.HKDF
    Test.Crypto.AES
    Test.Crypto.GCM
    Test.Crypto.Curve25519
    Test.Crypto.Differential
    Test.Crypto.Differential.Primitives
    Test.Crypto.Differential.Negative
    Test.Crypto.Differential.Metamorphic
    Test.Crypto.Differential.Fuzz
    Test.Crypto.Differential.Kyber
    Test.Crypto.Differential.ProtocolLibsignal
    Test.Crypto.Differential.ProtocolSelfConsistency
    Test.Crypto.Differential.Evidence
    Test.Crypto.Differential.HaclVsCryptogen
    Test.Crypto.Differential.FiatVsCryptogen
    Test.Crypto.SignalCompat
    Test.Crypto.Ed25519
    Test.Crypto.ChaCha20
    Test.Crypto.Signal.X3DH
    Test.Crypto.Signal.DoubleRatchet
    Test.Crypto.RatchetPersist
    Test.Crypto.SecureBytes
    Test.Crypto.Keccak
    Test.Crypto.MLKEM
    Test.Crypto.Poly1305
    Test.Security
    Test.Fuzz
    Test.FuzzInputs
    Test.FuzzConnection
    Test.Hardening.TCP
    Test.Hardening.Fault
    Test.Hardening.Recovery
    Test.Hardening.Soak
    Test.Integration
    Test.Equivalence
    Test.Network.Transport
    Test.Network.TransportClass
    Test.Network.Transport.Loopback
    Test.Network.TransportEdge
    Test.Network.UDP
    Test.Network.Socks5Live
    Test.Network.Dandelion
    Test.Network.DoSMitigation
    Test.Network.PeerManager
    Test.Network.Presence
    Test.Protocol.CBOR
    Test.Crypto.BIP39
    Test.Crypto.Export
    Test.Protocol.QRCode
    Test.Network.Noise
    Test.Chat.Session
    Test.Chat.Wire
    Test.Chat.WireEdge
    Test.Crypto.StealthAddress
    Test.Network.PeerExchange
    Test.Protocol.SafetyNumber
    Test.Protocol.MessageFormat
    Test.Protocol.WireFormat
    Test.Protocol.RouteToken
    Test.Crypto.PQXDH
    Test.Crypto.PQXDHEdge
    Test.Crypto.Random
    Test.Crypto.VRF
    Test.Crypto.PQWrapper
    Test.Crypto.KeyStore
    Test.Crypto.Signal.SenderKeys
    Test.Crypto.Signal.SenderKeysEdge
    Test.Crypto.Signal.Session
    Test.Crypto.SignalWireCompat
    Test.Plugin.Registry
    Test.Plugin.EphemeralIntegration
    Test.Storage.Anthony
    Test.Storage.Encryption
    Test.Network.DHT
    Test.Network.MDNS
    Test.Network.Protocol
    Test.CryptoIntegrity
    Test.Chat.Message
    Test.Chat.Contacts
    Test.Chat.API
    Test.Chat.OutboundQueue
    Test.Codegen
    Test.TUI.Types
    Test.TUI.Render
    Test.TUI.Input
    Test.TUI.Handshake
    Test.TUI.HandshakeEdge
    Test.TUI.Actions
    Test.TUI.Paths
    Test.TUI.Sim.Util
    Test.TUI.Sim.Contacts
    Test.TUI.Sim.Chat
    Test.TUI.Sim.Focus
    Test.TUI.Sim.Shortcuts
    Test.TUI.Sim.Menu
    Test.TUI.Sim.Dialogs
    Test.TUI.Sim.SettingsEdge
    Test.TUI.Sim.Workflows
    Test.TUI.Sim.Runtime
    Test.TUI.Sim.MessageFlow
    Test.Tools.Complexity
    Test.Tools.FStarVerify
    Test.Tools.FetchReferences
    Test.Security.Adversarial
    Test.Security.M11KeyMgmt
    Test.Security.M11Protocol
    Test.Security.Regression
    Test.Security.RegressionM7
    Test.Security.RegressionM8
    Test.Security.RegressionNet
    Test.Security.Unicode
    Test.Security.M11Symmetric
    Test.Security.M11Asymmetric
    Test.Security.M11SideChannel
    Test.Security.M11High
    Test.Security.M11HighAuth
    Test.Security.M11NoiseDH
    Test.Security.M11HighFS
    Test.Security.M11HighProto
    Test.Security.M11HighKeyImpl
    Test.Security.M11HighSymHash
    Test.Security.M11HighPQ
    Test.Security.M11HighPQHash
    Test.Security.M11Medium
    Test.Security.M11HighSC2
    Test.Security.M11HighAS2
    Test.Security.M11HighRemaining
    Test.Security.M11HighSMFSIA
    Test.Security.M11HighCrypto3
    Test.Security.M11HighKM3
    Test.Security.M11Final
    Test.Security.MCDC
    Test.Security.ConstantTimeAudit
    Test.Security.KeyLifecycle
    Test.Security.RegressionAudit
    Test.Security.Negative
    Test.Security.Boundary
    Test.Security.AdversarialProto
    Test.Bridge.UmbraClaw
    Test.Bridge.SignalRegistration
    Test.VectorIntegrity
    Test.Crypto.Vectors.AES
    Test.Crypto.Vectors.GCM
    Test.Crypto.Vectors.Ed25519
    Test.Crypto.Vectors.X25519
    Test.Crypto.Vectors.MLKEM
    Test.Crypto.Vectors.MLKEM_KAT
    Test.Crypto.Wycheproof
    CryptoGen
  build-depends:
    base         >= 4.18  && < 5,
    bytestring   >= 0.11  && < 0.14,
    array        >= 0.5   && < 0.7,
    containers   >= 0.6   && < 0.10,
    network      >= 3.1   && < 3.4,
    directory    >= 1.3   && < 1.5,
    filepath     >= 1.4   && < 1.7,
    process      >= 1.6   && < 1.8,
    stm          >= 2.5   && < 2.7,
    text         >= 2.0   && < 2.3,
    time         >= 1.12  && < 1.17,
    UmbraVox
  if !os(windows)
    build-depends:
      unix         >= 2.8   && < 2.11
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
