[package]
name = "protocol-oracle"
version = "0.1.0"
edition = "2021"
description = "libsignal protocol oracle for UmbraVOX differential testing"

# This crate is built ONLY inside the protocol-oracle VM (nix/vm-libsignal-protocol-oracle.nix).
# It wraps libsignal-protocol to generate X3DH/PQXDH/DoubleRatchet traces.
# It is NOT linked into UmbraVOX runtime.

[dependencies]
# libsignal-protocol — the Signal protocol implementation
# NOTE: This will be fetched from the pinned libsignal repo during VM build.
# The exact version is controlled by nix/oracles/libsignal-pin.json.
# libsignal-protocol = { path = "../../../libsignal/rust/protocol" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Random (deterministic seeded)
rand = "0.8"
rand_chacha = "0.3"
